--- a/css/style.less
+++ b/css/style.less
@@ -1,3 +1,5 @@
+@import "masthead.less";
+
 html {
   width:100%;
   height:100%;
@@ -43,25 +45,6 @@ a {
 }
 .header, .footer {
   height:100px;
-}
-.masthead {
-  position:absolute;
-  top:22px;
-  left:22px;
-  height:48px;
-  line-height:48px;
-  font-size:30px;
-  span {
-    margin-left:56px;
-    display:inline-block;
-    vertical-align:middle;
-    line-height:normal;
-    color:#aaaaaa;
-    b {
-      color:#111111;
-      font-weight:normal;
-    }
-  }
 }
 
 .controls {
