--- a/css/input.less
+++ b/css/input.less
@@ -40,11 +40,11 @@
 }
 
 .button-default-mixin {
-	.button-mixin(@white, @grey, @dark-grey, @light-grey, @grey);
+	.button-mixin(@white, @light-gray, @dark-gray, @lightest-gray, @light-gray);
 }
 
 .button-active-mixin {
-	.button-mixin(@blue, @blue, @white, @light-blue, @light-blue);
+	.button-mixin(@blue, @blue, @white, @pale-blue, @pale-blue);
 }
 
 .entry-mixin(@fill-color, @border-color, @text-color, @hover-fill-color, @hover-border-color) {
@@ -62,7 +62,7 @@
 }
 
 .entry-default-mixin {
-	.entry-mixin(@white, @grey, @dark-grey, @light-grey, @grey);
+	.entry-mixin(@white, @light-gray, @dark-gray, @lightest-gray, @light-gray);
 }
 
 
