--- a/css/search-results.less
+++ b/css/search-results.less
@@ -18,19 +18,19 @@
 	.size {
 	  position:absolute;
 	  font-weight:400;
-	  color:@dark-grey;
+	  color:@gray;
 	  left:90px;
 	}
 	.view {
 	  position:absolute;
 	  font-weight:400;
-	  color:@dark-grey;
+	  color:@gray;
 	  left:190px;
 	}
 	.number {
 	  position:absolute;
 	  font-weight:700;
-	  color:@dark-grey;
+	  color:@dark-gray;
 	  left:20px;
 	}
 }
